force-app/main/default/objects/AccountContactRelation/fields/ComarchAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ComarchAccountNumber__c</fullName>
    <formula>Account.ComarchAccountNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comarch Account Number</label>
    <type>Text</type>
</CustomField>