force-app/main/default/objects/AccountContactRelation/fields/ComarchContactNumber__c.field-meta.xml
<CustomField>
    <fullName>ComarchContactNumber__c</fullName>
    <formula>Contact.ExternalComarchContactId__c</formula>
    <label>Comarch Contact Number</label>
    <type>Text</type>
</CustomField>