force-app/main/default/objects/AccountContactRelation/fields/ContactSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>ContactSyncStatus__c</fullName>
    <formula>Contact.Synced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactSyncStatus</label>
    <type>Checkbox</type>
</CustomField>