force-app/main/default/objects/AccountContactRelation/fields/InitialContactRelation__c.field-meta.xml
<CustomField>
    <fullName>InitialContactRelation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Contact Relation</label>
    <type>Checkbox</type>
</CustomField>