force-app/main/default/objects/AccountContactRelation/fields/Synced__c.field-meta.xml
<CustomField>
    <fullName>Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced</label>
    <type>Checkbox</type>
</CustomField>